# aangan_final

./: BACKEND_PROPERTY_ENHANCEMENTS.rs  Cargo.toml  DEPLOYMENT.md  LANDLORD_APPROVAL_IMPLEMENTATION.md  PROPERTY_ENHANCEMENTS.md  README.md  deploy-mainnet.sh  dfx.json  package-lock.json  package.json  restart-dfx.sh  test-config.sh
src/Aangan_backend/: Aangan_backend.did  Cargo.toml
src/Aangan_backend/src/: lib.rs
src/Aangan_backend/src/api/: escrow_api_broken.rs  escrow_api_fixed.rs  escrow_api_new.rs  escrow_api_old.rs  mod.rs  nft_api.rs  property_api.rs  rental_api.rs  user_api.rs
src/Aangan_backend/src/auth/: mod.rs
src/Aangan_backend/src/rental_core/: mod.rs  nft_minter.rs  rental_manager.rs
src/Aangan_backend/src/storage/: escrow_store.rs  image_store.rs  mod.rs  property_store.rs  rental_store.rs  user_store.rs
src/Aangan_backend/src/types/: escrow.rs  image.rs  mod.rs  nft.rs  property.rs  rental.rs  user.rs
src/Aangan_frontend/: README.md  index.html  package.json  tailwind.config.ts  vite.config.ts  vite.config.ts.timestamp-1755002089675-6ffa5cda50d2c.mjs
src/Aangan_frontend/src/: App.tsx  index.css  main.tsx  test-env.ts
src/Aangan_frontend/src/components/: ErrorBoundary.tsx  Header.tsx  PlugWallet.tsx  PropertyCard.tsx  PropertyManagementCard.tsx  RentalRequestCard.tsx
src/Aangan_frontend/src/contexts/: AuthContext.tsx  ICPContext.tsx
src/Aangan_frontend/src/hooks/: useEscrowService.ts  useServices.ts
src/Aangan_frontend/src/pages/: AddProperty.tsx  EscrowPortal.tsx  Index.tsx  LandlordDashboard.tsx  Login.tsx  Marketplace.tsx  (+4 more)
(+13 files in other folders)
