[package]
name = "aangan_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.ic-cdk-timers]
version = "0.7"
optional = true

[features]
default = []
timers = ["ic-cdk-timers"]